--- a/src/App.css
+++ b/src/App.css
@@ -1,100 +1,12 @@
 .App {
   text-align: center;
+  padding: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 body {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #1a1a1a;
-  color: #f5f5f5;
-}
-
-.App {
-  text-align: center;
-  padding: 2rem;
-}
-
-.cv-container {
-  background-color: #2c2c2c;
-  border-radius: 15px;
-  padding: 2rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-  max-width: 800px;
-  margin: auto;
-}
-
-.name {
-  font-size: 2.5rem;
-  color: #ffcc00;
-  text-transform: uppercase;
-}
-
-.profession {
-  font-size: 1.5rem;
-  color: #66ff66;
-}
-
-.info-section, .education-section, .hobbies-section {
-  margin-top: 2rem;
-}
-
-h3 {
-  font-size: 1.5rem;
-  color: #ff6666;
-  text-transform: uppercase;
-  border-bottom: 2px solid #ff6666;
-  display: inline-block;
-  margin-bottom: 1rem;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-ul li {
-  background-color: #404040;
-  padding: 0.5rem;
-  margin-bottom: 0.5rem;
-  border-radius: 5px;
-}
-
-p {
-  font-size: 1.2rem;
-  color: #e6e6e6;
+  background-color: #fff; /* Fondo blanco */
+  color: #333; /* Texto oscuro */
 }
